<?xml version="1.0"?>
<package format="2">
  <name>subt_spot</name>
  <version>1.0.0</version>
  <description>Support package for Spot robot in SubT virtual challenge</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bosdyn_spot</depend>
  <depend>champ_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>

  <exec_depend>champ_base</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
